--- a/App/src/main/res/values/styles.xml
+++ b/App/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="@android:style/Theme.Holo.Light"></style>
+    <style name="AppTheme" parent="@android:style/Theme.Light"></style>
 
 </resources>
